--- a/app.yaml
+++ b/app.yaml
@@ -1,7 +1,14 @@
-env: standard
-runtime: nodejs14
-service: default
-handlers:
-  - url: /.*
-    secure: always
-    script: auto
+runtime: nodejs
+env: flex
+automatic_scaling:
+    min_num_instances: 1
+    max_num_instances: 10
+    cool_down_period_sec: 180
+    cpu_utilization:
+        target_utilization: 0.9
+resources:
+    cpu: 2
+    memory_gb: 4.6
+    disk_size_gb: 10
+network:
+    name: default
